<resources>
    <string name="app_name">Dialer</string>
    <string name="menu_question">What would you like to do?</string>
    <string name="btn_dial">Dial</string>
    <string name="btn_callList">Call list</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_map">Map</string>
    <string name="btn_about">About</string>
    <string name="textView_dial">This is the activity for dial</string>
    <string name="textView_CallList">This is the activity for call list</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="about_message">"This app is supposed to mimic the keypad\n" +
                                "on a phone. Ths app willl consist of\n" +
                                "activities to:\n\n" +
                                "* Enter numbers to dial\n" +
                                "* See previously dialed numbers\n" +
                                "* Change th keypad settings\n" +
                                "* Show on a Map where previous calls are dialed from"</string>
    <string name="title_about">About</string>
    <string name="btn_ok">OK</string>
    <string name="toast_ok">Selected Option: OK</string>
    <string name="toast_msg">Content already viewed</string>
    <string name="Aboutvalue"></string>
    <string name="Empty"></string>
    <string name="ABC">ABC</string>
    <string name="DEF">DEF</string>
    <string name="GHI">GHI</string>
    <string name="JKL">JKL</string>
    <string name="MNO">MNO</string>
    <string name="PQRS">PQRS</string>
    <string name="TUV">TUV</string>
    <string name="WXYZ">WXYZ</string>
    <string name="PLUS">+</string>
    <string name="Zero">0</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="Star">*</string>
    <string name="Pound">#</string>
    <string name="pathZero">/zero.</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="textDialpadTitle">1</string>
    <string name="textDialpadMessage">ABC</string>
    <string name="textTitle">212</string>
    <string name="textMessage">ASDFf</string>
    <string name="numbersDialedTextView"></string>
    <string name="btnDeleteText" />
    <string name="btnCallText" />
    <string name="settings">Settings</string>
    <string name="store_numbers_key">Store numbers</string>
    <string name="store_numbers_title">Store numbers</string>
    <string name="store_numbers_summary_on">Dialed telephone numbers are stored so that they can be viewed later</string>
    <string name="store_numbers_summary_off">Dialed telephone numbers are not stored</string>
    <string name="delete_numbers_key">Delete numbers</string>
    <string name="delete_numbers_title">Delete stored numbers</string>
    <string name="delete_numbers_summary">Delete stored telephone numbers from storage"</string>
    <string name="textViewno_telephone_numbers_are_stored">No telephone numbers are stored</string>
    <string name="toast_text_numbers_deleted">All stored numbers deleted</string>
    <string name="call_list_bar_display_name">Call list</string>
    <string name="toast_text_not_store_numbers">Phone numbers are not being stored</string>
    <string name="btnDownloadVoices">Download voices</string>
    <string name="menu_download_voices">Download voices</string>
    <!---->
    <string name="url" translatable="false">https://dt031g.programvaruteknik.nu/dialer/voices/</string>
    <string name="voice_storage_path" translatable="false">/data/user/0/se.miun.caha1906.dt031g.dialer/files/voices/ </string>
    <string name="voices_path" translatable="false">voices/</string>
    <!---->
    <string name="listPreference_voice_key" translatable="false">voice_key</string>
    <string name="listPreference_voice_title" >Voice</string>
    <string name="listPreference_voice_summary" translatable="false">voice_summary</string>
    <string name="listPreference_voice_entries" translatable="false">voice_entries</string>
    <string name="listPreference_voice_values" translatable="false">voice_values</string>
    <string name="listPreference_voice_default" translatable="false">voice_values</string>
    <!---->


</resources>