<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        app:key="@string/store_numbers_key"
        app:title="@string/store_numbers_title"
        app:summaryOn="@string/store_numbers_summary_on"
        app:summaryOff="@string/store_numbers_summary_off"
        app:defaultValue="true"
        app:icon="@drawable/ic_save_nubers"/>

<!--    app:defaultValue="true"-->
    <Preference
        app:key="@string/delete_numbers_key"
        app:title="@string/delete_numbers_title"
        app:summary="@string/delete_numbers_summary"
        app:icon="@drawable/ic_delete_numbers"/>

    <ListPreference
        app:key="@string/listPreference_voice_key"
        app:title="@string/listPreference_voice_title"
        app:summary="@string/listPreference_voice_summary"
        app:entries="@array/listPreference_voice_entries"
        app:entryValues="@array/listPreference_voice_values"
        app:defaultValue="@string/listPreference_voice_default"
        app:icon="@drawable/ic_voice"/>

</PreferenceScreen>